<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_person"
            android:title="@string/perfil"
            />

        <item
            android:id="@+id/nav_emprendimiento"
            android:icon="@drawable/ic_store"
            android:title="@string/emprendimiento"
            />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat"
            />
    </group>

    <item android:title="@string/options">
        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/configuraci_n"
                    />

                <item
                    android:id="@+id/nav_salir"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/log_out"
                    />

                <item
                    android:id="@+id/nav_dash"
                    android:icon="@drawable/ic_store"
                    android:title="@string/dash"
                    />
            </group>

        </menu>
    </item>

</menu>