<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="399dp"
        android:layout_height="match_parent"
        android:background="@drawable/boton_superior">




        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"

            android:text="Nombre"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/bold"/>


        <TextView
            android:id="@+id/txtDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/descripcion"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_below="@+id/txtNombre"
            android:fontFamily="@font/light_italic"/>


        <TextView
            android:id="@+id/Categoriia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="Categoria:"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_below="@+id/txtDescripcion"
            android:fontFamily="@font/light_italic"/>

        <TextView
            android:id="@+id/txtCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="8dp"
            android:layout_below="@+id/txtDescripcion"
            android:layout_marginLeft="8dp"
            android:layout_toEndOf="@+id/Categoriia"
            android:layout_toRightOf="@+id/Categoriia"
            android:text="@string/Categoria"
            android:textSize="12sp"
            android:textStyle="bold"
            android:fontFamily="@font/regular"/>


        <TextView
            android:id="@+id/Telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="Telefono:"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_below="@+id/Categoriia"
            android:fontFamily="@font/light_italic"/>

        <TextView
            android:id="@+id/txtTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/txtCategoria"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/Categoriia"
            android:layout_toRightOf="@+id/Categoriia"
            android:text="@string/Telefono"
            android:textSize="12sp"
            android:textStyle="bold"
            android:fontFamily="@font/regular"/>


        <TextView
            android:id="@+id/Direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="Direccion:"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_below="@+id/Telefono"
            android:fontFamily="@font/light_italic"/>

        <TextView
            android:id="@+id/txtDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/txtTelefono"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/Categoriia"
            android:layout_toRightOf="@+id/Categoriia"
            android:text="@string/Direccion"
            android:textSize="12sp"
            android:textStyle="bold"
            android:fontFamily="@font/regular"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>